--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<h1>hello, this is new branch</h1>
+<h1>this is an update
+    
+</h1>
 <script src="app.js">
 </script>
 <link rel="stylesheet" href="style.css">
